css/expdb.css
/* ... */
.sqlmessage-buttonbox {
        min-height: 20px;
    }

.datainfo {
  color: #999;
  padding-top: 3px;
  padding-bottom: 40px;
  font-size: 10pt;
  clear: both;
}

.datainfo i{
  margin-left: 10px;
  margin-right: 5px;
}

#disqus_thread {
     position: relative;
}
#disqus_thread:after {
     content: "";
     display: block;
     height: 55px;
     width: 100%;
     position: absolute;
     bottom: 0;
     background: white;
}

html, body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   width: auto !important;  /* Firefox will set width as auto */
   min-width: 480px; /* suppose you want minimun width of 1000px */
   background-color: #ececec;
}

      a:hover {
        cursor:pointer;
      }

      .openmlsectioninfo p {
	color: #444;
	padding-top: 3px;
	font-size: 11pt;
      }

      td {
	color: #666;
	font-size: 11pt;
      }

      .form-group label{
   	font-weight: 600;
	margin-bottom: 0px;
      }

      /* Wrapper for page content to push down footer */
      #wrap {
        min-height: 100%;
        /* Negative indent footer by it's height */
        margin: 0 auto 0px;
        margin-top: 50px;
        position: relative;
      }

      /* Set the fixed height of the footer here */
      #push,
      #footer {
	      padding: 5px;
      }

.expand-all a {
    color: #08C;
    font-size: 14px;
    font-weight: bold;
    padding-left: 7px;
    text-decoration: none;
    cursor: pointer;
  }

.expand-all a:hover{
    color: #04C;
  }

.nav-search {
  *zoom: 1;
}

.nav-search:before,
.nav-search:after {
  display: table;
  line-height: 0;
  content: "";
}

.nav-search:after {
  clear: both;
}


.nav-search > li {
  float: left;
  padding-top:8px;
  padding-bottom:0px;
}

.nav-search > li > a:hover {
  background-color: #ffffff;
  color: #ff0000;
}

.nav-search > li > a {
  padding-right: 11px;
  padding-left: 11px;
  margin-right: 2px;
  line-height: 14px;
  color: #777;
}

.nav-search > li > a {
  padding-top: 8px;
  padding-bottom: 10px;
  margin-top: 2px;
  margin-bottom: 0px;
}

.nav-search > .active > a{
  border-bottom: 3px solid #ff0000;
  color: #ff0000;
  margin-bottom: -3px;
}

.runmenu{
  list-style-type: none;
  padding:0;
  margin-top:5px;
  margin-bottom:30px;
  width:100%;
  font-family: 'Roboto', sans-serif;
  font-weight: 300 !important;
}


.runmenu > li {
  padding-bottom:12px;
  padding-top:0px;
}

.runmenu > li > a:hover {
  color: #ff0000;
  text-decoration: none;
}

.runmenu > li > a {
  padding-right: 11px;
  padding-left: 11px;
  margin-right: 2px;
  line-height: 14px;
  color: #777;
}

.runmenu > li > a {
  padding-top: 8px;
  padding-bottom: 0px;
  margin-top: 2px;
  margin-bottom: 10px;
}

.runmenu > .active > a{
  color: #ff0000;
}


.topsearch{
  padding-top:15px;
  padding-bottom:7px;
  z-index:1040;
}

.topsearch form{
  margin-bottom:0px;
}

.searchstats{
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  color: #999;
  font-size: 20px;
  padding-top:15px;
}

.noresult{
  text-align: center;
  font-size: 16px;
  padding:80px;
}

.noresult i{
  color: #aeaeae;
}

.noresult p{
  padding:4px;
}

#tableview_wrapper{
  padding-top: 15px;
}

#tableview_filter{
  padding-right: 5px;
}
#tableview_filter input{
  line-height: 18pt;
}

.dataTables_scrollHead{
  background: #fff;
}

.panel{
  padding:15px;
  border-radius: 0px;
}

.tablepanel{
  padding:0px;
  background: #fff;
}

.tablepanel td{
  padding-top: 15px !important;
  padding-bottom: 15px !important;
  padding-left: 15px !important;
}

.searchresult{
  margin-bottom:0px !important;
}

.searchresult:hover {
    cursor: hand;
    cursor: pointer;
}

.topselectors{
  margin-bottom:25px;
  clear: both;
}

.itemhead{
  width: 250px;
  display:inline-block;
  float:left;
  overflow: hidden;
}

.itemheadhead{
  width: 70px;
  display:inline-block;
  float:left;
  overflow: hidden;
  height: 60px;
}

.itemheadfull{
  width: 100%;
  display:block;
  clear: both;
  overflow: hidden;
}

.itemheadfull span{
  color: #aeaeae;
  font-weight: normal;
}

.itemheadfull span i{
  margin-right: 0px;
  font-weight: normal;
  font-size: 14px;
}

.properties{
  box-shadow: 0 0 4px rgba(0,0,0,.14),0px 4px 8px rgba(0,0,0,.14) !important;
  margin-bottom: 10px;
}

.menuaction{
  color: #999;
  text-align: right;
  height: 18px;
  padding-top: 3px;
}

.menuaction a{
  color: #222;
}

.card{
  box-shadow: 0 0 4px rgba(0,0,0,.14),0px 4px 8px rgba(0,0,0,.14) !important;
  background: #fff;
  margin-top: 10px;
  margin-bottom: 10px;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 15px;
  padding-bottom: 15px;
  cursor: pointer;
}

.cardaction{
  margin-left: 5px;
  color: #999;
  font-size: 14px;
  text-decoration: none;
  margin-left: auto;
  margin-right: auto;
  width: 200px;
  display: block;
  text-align: center;
}

.cardaction i{
  padding-left: 10px;
}

.searchresult:hover .actionicon, .searchresult.hover .actionicon { display: block; }

.actionicon{
  height: 25px;
  margin-bottom: -25px;
  color: red;
  text-decoration: none;
  float: right;
  display: none;
  background-color: white;
  z-index: 2;
  position: relative;
}

.actionicon i{
  font-size: 22px !important;
  margin-right: 5px !important;
}

.cardtable{
  box-shadow: 0 0 4px rgba(0,0,0,.14),0px 4px 8px rgba(0,0,0,.14) !important;
  background: #fff;
  margin-bottom: 10px;
}

.cardrow > td{
  padding-left: 15px !important;
  padding-top: 15px !important;
}

.cardhead{
  display:inline-block;
  padding-bottom: 15px;
  float: left;
}

.cardhead i{
  width: 30px;
  font-size: 22px;
  display:inline-block;
}

.cardhead span{
  display:inline-block;
  font-size: 22px;
  font-family: 'RobotoDraft', sans-serif;
  font-weight: 300 !important;  color: #757575;
  margin-top: 0px;
}

.cardactions {
  display:inline-block;
  position: relative;
  float:right;
}

.card-content {
  position: relative;
  clear: both;
}

.card-content-full {
  position: relative;
  clear: both;
  padding: 0px;
}
/* ... */

